Fixed thumbnail images are stretched in Safari.

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -80,7 +80,6 @@ $color-secondary: #c4c4c4;
 
         img {
           width: auto;
-          height: 100%;
           display: block;
           max-width: none;
           max-height: inherit;
